<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCustomer"
    tools:context="com.android.group0674.onlinestore.View.CustomerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/customerActivityTitleTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_add_shopping_cart_white_24dp"
                android:text="@string/user_header"
                android:textAlignment="center"
                android:textSize="25dp"
                android:textColor="@color/white" />
        </LinearLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="359dp"
            android:clickable="true"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:scrollbars="vertical" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/viewCartBtn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="175dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:text="@string/view_cart"
                android:textSize="14sp" />

            <Button
                android:id="@+id/logOutBtn"
                android:layout_width="100dp"
                android:layout_height="50dp"

                android:layout_below="@+id/viewCartBtn"
                android:layout_centerHorizontal="true"
                android:text="@string/log_out"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
